bad/assign_uop_bneg_class.example_compiler_output
ERROR
[1mbad/assign_uop_bneg_class.lat:6:9: [1;31merror: [0;1mleft side is not assignable[m
	!false = new Y;
	       [1;32m^[m
[1mbad/assign_uop_bneg_class.lat:6:2: [1;34mnote: [0;1mleft side starts here[m
	!false = new Y;
	[1;32m^[m
